Tweak the APR_OFF_T_FMT logic so that we get the right value on Solaris Sparc too.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60814 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Changes with APR a9
+  *) Get APR_OFF_T_FMT defined properly on Solaris Sparc.
+     [Jeff Trawick]
+
 Changes with APR a8
   *) Change the name of the sa_len field in apr_sockaddr_t to salen.
      Some platforms have a macro named sa_len.
