Lock config changes:
1) Detect SysV sem capability by the presence of sempaphore functions, not
   by the presence of union semun.  (I don't think this changed anything
   in practice since systems tend to have flock and fcntl.)

2) New config variable apr_lock_method can override autodetection of the
   apr_lock implementation method.

3) Select SysV semaphores for OS/390 because they perform better than other
   supported locking mechanisms.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60820 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 Changes with APR a9
+  *) Lock config changes: Detect SysV sem capability by the presence of
+     sempaphore functions, not by the presence of union semun.  New
+     config variable apr_lock_method can override autodetection of the 
+     apr_lock implementation method.  For now, hints.m4 uses it to select 
+     SysV semaphores for OS/390.  [Jeff Trawick]
+     
   *) Get APR_OFF_T_FMT defined properly on Solaris Sparc.
      [Jeff Trawick]
 
