Add APR_SIZE_T_FMT to help work around the fact that apr_size_t/ apr_ssize_t is long on AIX.  Get the other APR_xx_T_FMT variables defined properly on AIX.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60840 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Changes with APR a9
+  *) Add APR_SIZE_T_FMT.  Get the other APR_xx_T_FMT variables
+     defined properly on AIX.  [Jeff Trawick]
+
   *) network API changes: get rid of apr_get_socket_inaddr(), 
      apr_get_remote_name(), and apr_get_local_name()  [Jeff Trawick]
 
