Add apr_make_os_sock() for constructing a fully-capable APR socket.
The BeOS sockets.c doesn't look up-to-date and I think David
is(has) switching(switched) to using the Unix sockets.c.  Thus,
I have not messed with it.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60882 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Changes with APR a9
+  *) Add apr_make_os_sock() for constructing a fully-capable APR
+     socket.  [Jeff Trawick]
+
   *) Make APR's shared memory routines always allocate enough memory
      for the requested segment, the MM internal types, and the APR
      internal types.
