Allow APR programmers to determine if an MMAP is read-only or if it should be write-able. Submitted by:	Ryan Bloom and Will Rowe
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60908 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 Changes with APR a9
+  *) Allow the APR programmer to specify if the MMAP is read-only or
+     write-able.
+     [Ryan Bloom and Will Rowe]
+
   *) Check more carefully for getaddrinfo().  Accept those that
      require <netdb.h> to be included (e.g., Tru64).  Reject those that 
      fail a very basic operational test (e.g., AIX).  [Jeff Trawick]
