Implement Win32 MMAP support.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60912 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Changes with APR a9
+
+  *) Add Win32 MMAP support [William Rowe]
+
   *) Allow the APR programmer to specify if the MMAP is read-only or
      write-able.
      [Ryan Bloom and Will Rowe]
