Add apr_parse_addr_port() for parsing the hostname:port portion of URLs and similar strings.
Somebody with VC++ 6.0 needs to update the .dsp file(s) to include
inet_pton.c.  The BeOS Makefile.in wasn't updated because I think
BeOS uses the unix code now.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60916 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 Changes with APR a9
+  *) Add apr_parse_addr_port() for parsing the hostname:port portion
+     of URLs and similar strings.  [Jeff Trawick]
 
   *) Add Win32 MMAP support [William Rowe]
 
