Only support IPv6 if getaddrinfo() exists, because that is the only IPv6-capable resolver function we support.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60938 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Changes with APR a9
+  *) Only support IPv6 if we have sockaddr_in and a working 
+     getaddrinfo().  [Jeff Trawick]
+
   *) Add apr_parse_addr_port() for parsing the hostname:port portion
      of URLs and similar strings.  [Jeff Trawick]
 
