--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 Changes with APR a9
+
+  *) Removed the iconv implementation from the i18n/unix/iconv branch.
+     This now resides in the apr-iconv repository, and will be ported
+     over time to use native apr types (e.g. apr_dso) for portability.
+
   *) Only support IPv6 if we have sockaddr_in and a working 
      getaddrinfo().  [Jeff Trawick]
 
