Rename the apr_opendir symbol to apr_dir_open.  This makes more sense, and the rename was proposed a while ago inside of APR.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60960 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 Changes with APR b1
+  *) Rename apr_opendir to apr_dir_open.  [Ryan Bloom]
 
   *) apr_snprintf()'s %pI format string now takes apr_sockaddr_t *
      instead of sockaddr_in *.  [Jeff Trawick]
