Cleanup a group of apr compil warnings on Solaris Submitted by:   Dale Ghent <daleg@elemental.org>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60978 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 Changes with APR b1
+
+  *) Cleanup some compiler warnings on Solaris
+     [Dale Ghent <daleg@elemental.org>
+
   *) apr_getaddrinfo() can now return multiple addresses for a host
      via the next field in apr_sockaddr_t.  [Jeff Trawick]
 
