Cleanups so that the support programs build cleanly.  The Win32 values need to be sanity checked. Submitted by:	Cliff Woolley <cliffwoolley@yahoo.com> Reviewed by:	Ryan Bloom
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60983 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,10 @@
 Changes with APR b1
 
+  *) Cleanup to help Apache support programs build cleanly.
+     [Cliff Woolley <cliffwoolley@yahoo.com>]
+
   *) Cleanup some compiler warnings on Solaris
-     [Dale Ghent <daleg@elemental.org>
+     [Dale Ghent <daleg@elemental.org>]
 
   *) apr_getaddrinfo() can now return multiple addresses for a host
      via the next field in apr_sockaddr_t.  [Jeff Trawick]
