FreeBSD's sendfile does not work if the FreeBSD version is less than 4.2 and we are compiled for a threaded program.  This change automatically detects that set of conditions, and sets the sendfile detection correctly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60990 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Changes with APR b1
 
+  *) FreeBSD does not support sendfile() in combination with threads
+     before version 4.2.  We no longer even try to support it.
+     [Ryan Bloom]
+
   *) On FreeBSD, it is possible for the first call to sendfile to
      get EAGAIN, but still send some data.  This means that we cannot
      call sendfile and then check for EAGAIN, and then wait and call
