Fix a couple of places where copied code wasn't modified correctly.  This should get the apr_poll functions working better when it is implemented using select(). PR:	6977 Submitted by:	Nick Caruso <ncaruso@gamesville.com>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60991 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Fix a logic error in the poll code when implemented using select.
+     [Nick Caruso <ncaruso@gamesville.com>]
+
   *) FreeBSD does not support sendfile() in combination with threads
      before version 4.2.  We no longer even try to support it.
      [Ryan Bloom]
