Remove the ability to allocate out of a NULL pool.  This was always a bad idea, because it opened up memory leaks.  It is very likely that this will expose some seg faults and some memory leaks, but I have tried to find and fix most of the already.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61002 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Remove the ability to allocate memory out of a NULL pool.
+     [Ryan Bloom]
+
   *) Add an APR_GET_POOL macro to get a pool from any APR type that has
      a pool.  This requires that ALL apr types put the pool as the first
      field in their structure. [Ryan Bloom]
