Libtool-ize APR.
To simplify the task, I also shifted the Makefiles to include a rules.mk
(based on APRUTIL's with a few tweaks). Still needs some work to remove the
INCLUDES setup in all the Makefiles (these can be shared).

buildconf now does more work (and generates some output)

aclocal.m4 is based on a number of M4 files, rather than standalone

apr/test/ has been updated but is probably broken in a few ways.

objs/ is now gone. we link directly from the .lo files.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61037 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Libtool'ized APR and converted all the makefiles to share rules
+     from helpers/rules.mk. [Greg Stein]
+
   *) Remove a warning on FreeBSD.  FreeBSD defines TCP_NO_PUSH, but we
      don't actually use it.  This causes os_cork to be defined but not
      used.  This patch keeps us from defining os_cork and os_uncork on
