Add APR_DECLARE to some of APR's function declarations.  This helps with linking on some platforms. Submitted by:	Gregory Nicholls <gnicholls@level8.com>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61046 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Specify APR_DECLARE to some of the APR functions.  This helps linking
+     on some operating systems.  [Gregory Nicholls <gnicholls@level8.com>]
+
   *) Libtool'ized APR and converted all the makefiles to share rules
      from helpers/rules.mk. [Greg Stein]
 
