Document that we honor CFLAGS in the normal autoconf way
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61054 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Some adjustment of hints.m4 setting flags (used to check if null
+     first) and added some verbosity. [Jim Jagielski]
+
   *) Specify APR_DECLARE to some of the APR functions.  This helps linking
      on some operating systems.  [Gregory Nicholls <gnicholls@level8.com>]
 
