Add linkage declarations to the DSO functions. Submitted by:	Gregory Nicholls <gnicholls@level8.com>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61055 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changes with APR b1
 
+  *) Add linkage declarations to the DSO code.
+     [Gregory Nicholls <gnicholls@level8.com>]
+
   *) Some adjustment of hints.m4 setting flags (used to check if null
      first) and added some verbosity. [Jim Jagielski]
 
