All platforms now register a cleanup when a DSO is loaded.  This just makes a practice uniform across all platforms.  In the past, this was done differently on different platforms.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61076 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Changes with APR b1
 
+  *) All dso implementations now register a cleanup to unload the DSO
+     when it is loaded.  If the pool is removed, we really do need to
+     remove the DSO.  In the past, different platforms behaved differently
+     it this respect.  [Ryan Bloom]
+
   *) Add linkage declarations to the DSO code.
      [Gregory Nicholls <gnicholls@level8.com>]
 
