The APR_FINFO_wanted declaration changes for apr_stat/lstat/getfileinfo.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61085 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Changes with APR b1
 
+  *) Introduce the wanted flag argument to the apr_stat/lstat/getfileinfo
+     family of functions.  This change allows the user to determine what
+     platform-specific file information is retrieved, to optimize both
+     portability and performance.  [William Rowe]
+
   *) Fix make depend.  [Ryan Bloom]
 
   *) All dso implementations now register a cleanup to unload the DSO
